# jane-street-market-prediction-kaggle

./: README.md  pyproject.toml  requirements.txt
config/: model_config.yaml
scripts/: setup_test.py  train_ensemble_script.py
src/data/: data_loader.py
src/evaluation/: cross_validator.py  jane_street_utility.py
src/features/: feature_pipeline.py  pca_reducer.py  technical_indicators.py
src/models/: autoencoder_mlp_model.py  base_model.py  ensemble_model.py  xgboost_model.py
src/utils/: config.py  timer.py
tests/: test_data_loader.py
